# quotey

./: .env.example  .gitignore  .tmp_new_config.rs  .tmp_orig_config.rs  .tmp_try2_config.rs  .tmp_try_config.rs  .ubsignore  AGENTS.md  AGENT_QUICK_REFERENCE.md  AI_AGENT_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Justfile  LICENSE  QUICK_START.md  README.md  SETUP_SUMMARY.md  deny.toml  docker-compose.headless.yml  docker-compose.yml  postmortem_codex.md  quotey.db  release_checksums.txt  seed_data_Iuxa.db  seed_data_test.db  seed_data_test_fresh.db
.beads/: beads.db  beads.db2  beads.db2-wal  config.yaml  issues.jsonl  issues.jsonl.bak  issues.jsonl.bak-quotey-prefix  issues.jsonl.pre-db-script  issues.jsonl.pretty.backup  issues.jsonl.schemafix.before  issues.jsonl.schemafix.before2  issues.jsonl.schemafix.before3  issues.jsonl.with-mixed-prefix-backup  last-touched
.cargo/: config.toml
.claude/: settings.toml
.githooks/: pre-commit
.planning/: ARCHITECTURE_DECISION_RESEARCH.md  CONFIGURATION_REVIEW_AND_IMPROVEMENTS.md  CRATE_RESEARCH.md  DICKLESWORTHSTONE_STACK.md  EPIC_ASUPERSYNC_RUNTIME_MIGRATION_SPEC.md  FEAT_01_DEAL_DNA_SPEC.md  FEAT_02_CONVERSATIONAL_CONSTRAINT_SOLVER_SPEC.md  FEAT_03_EMOJI_MICRO_APPROVALS_SPEC.md  FEAT_04_GHOST_QUOTES_SPEC.md  FEAT_05_EXPLAINABLE_POLICY_SPEC.md  FEAT_06_MULTI_USER_SESSIONS_SPEC.md  FEAT_07_WIN_PROBABILITY_SPEC.md  FEAT_08_IMMUTABLE_QUOTE_LEDGER_SPEC.md  FEAT_09_CONFIGURATION_ARCHAEOLOGY_SPEC.md  FEAT_10_SMART_THREAD_ROUTING_SPEC.md  FOUNDATION_IMPLEMENTATION_PLAN.md  FOUNDATION_QUALITY_GATES.md  FOUNDATION_QUICKSTART.md  INSPIRATION_RESEARCH.md  PC_1_3_REP_PROFILE_ENTITY_CONTRACT.md  PREMORTEM_ANALYSIS.md  PREMORTEM_TODO.md  PROJECT.md  QA_02_1_FAKE_TEST_INVENTORY.md  QA_PROGRAM_TESTING_EXCELLENCE_SPEC.md  RESEARCH_AGENT_DOCUMENTATION.md  RESEARCH_ASUPERSYNC.md  RESEARCH_CLOSED_LOOP_POLICY.md  RESEARCH_COMPOSIO_IMPLEMENTATION.md  RESEARCH_CONFIGURATION_ARCHAEOLOGY.md  RESEARCH_CONVERSATIONAL_CONSTRAINT_SOLVER.md  RESEARCH_DEAL_DNA.md  RESEARCH_DICKLESWORTHSTONE_PROJECTS.md  RESEARCH_DOCUMENT.md  RESEARCH_EMOJI_MICRO_APPROVALS.md  RESEARCH_EXPLAINABLE_POLICY.md  RESEARCH_GHOST_QUOTES.md  RESEARCH_IMMUTABLE_LEDGER.md  RESEARCH_INDEX.md  RESEARCH_MCP_PROTOCOL_AND_RUST_SDKS.md  (+54 more)
.skillshare/: config.yaml
.tmp/: ubs-ignore-all.txt
.tmp-target/: .rustc_info.json
.ubs-mini/: ubs.json  ubs.jsonl
config/: quotey.dev.toml  quotey.example.toml  quotey.headless.toml  quotey.prod.toml  quotey.staging.toml
crates/agent/: Cargo.toml
crates/agent/src/: conversation.rs  extraction.rs  guardrails.rs  lib.rs  llm.rs  prompts.rs  runtime.rs  tools.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: config.rs  doctor.rs  genome.rs  migrate.rs  mod.rs  policy_packet.rs  rule_preview.rs  seed.rs  smoke.rs  start.rs
crates/cli/tests/: commands_runtime.rs
crates/core/: Cargo.toml
crates/core/src/: ambiguity.rs  audit.rs  config.rs  errors.rs  execution_engine.rs  lib.rs
crates/core/src/approvals/: mod.rs
crates/core/src/archaeology/: mod.rs
crates/core/src/autopsy/: mod.rs
crates/core/src/collab/: mod.rs
crates/core/src/cpq/: anomaly.rs  boundary.rs  catalog.rs  concession.rs  constraint_rule_builder.rs  constraints.rs  counteroffer.rs  discount_budget.rs  discount_policy_builder.rs  draft_quote_builder.rs  escalation.rs  hierarchy.rs  mod.rs  negotiation_audit.rs  policy.rs  precedent.rs  pricing.rs  product_matcher.rs  replay.rs  rollout.rs  rule_builder.rs  safety.rs  simulator.rs  telemetry.rs
crates/core/src/dna/: mod.rs
crates/core/src/domain/: ai_cost.rs  analytics.rs  approval.rs  auth.rs  autopsy.rs  customer.rs  dialogue.rs  execution.rs  explanation.rs  integration.rs  mod.rs  negotiation.rs  optimizer.rs  org_settings.rs  outbox.rs  precedent.rs  product.rs  quote.rs  quote_comment.rs  quote_lock.rs  requirement_extraction.rs  sales_rep.rs  simulation.rs  visual_rule.rs
crates/core/src/explanation/: mod.rs
crates/core/src/flows/: engine.rs  mod.rs  states.rs
crates/core/src/ghost/: mod.rs
crates/core/src/ledger/: mod.rs
crates/core/src/ml/: mod.rs
crates/core/src/policy/: mod.rs  optimizer.rs
crates/core/src/services/: integration_adapter.rs  mod.rs  outbox_service.rs
crates/core/src/suggestions/: engine.rs  mod.rs  scoring.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  fixtures.rs  lib.rs  migrations.rs
crates/db/src/repositories/: ai_cost.rs  analytics.rs  anomaly_override.rs  approval.rs  audit.rs  customer.rs  dialogue.rs  execution_queue.rs  explanation.rs  integration_config.rs  memory.rs  mod.rs  negotiation.rs  optimizer.rs  org_settings.rs  precedent.rs  pricing_snapshot.rs  product.rs  quote.rs  quote_comment.rs  quote_lock.rs  sales_rep.rs  simulation.rs  suggestion_feedback.rs
crates/db/tests/: critical_path_coverage.rs  e2e_scenarios.rs  negotiation_persistence.rs  seed_contract.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  lib.rs  main.rs  server.rs  tools.rs
crates/mcp/tests/: contract_snapshot_tests.rs  integration_tests.rs
crates/server/: Cargo.toml
crates/server/src/: bootstrap.rs  crm.rs  health.rs  main.rs  pdf.rs  portal.rs  web.rs
crates/slack/: Cargo.toml
crates/slack/src/: blocks.rs  commands.rs  events.rs  lib.rs  socket.rs
crates/slack/tests/: integration_with_real_db.rs
docs/: README.md  docusaurus.config.ts  package.json  sidebars.ts
migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_emoji_approvals.down.sql  0002_emoji_approvals.up.sql  0003_configuration_fingerprints.down.sql  0003_configuration_fingerprints.up.sql  0004_dialogue_state.down.sql  0004_dialogue_state.up.sql  0005_policy_explanations.down.sql  0005_policy_explanations.up.sql  0006_quote_sessions.down.sql  0006_quote_sessions.up.sql  0007_quote_ledger.down.sql  0007_quote_ledger.up.sql  0008_dependency_graph.down.sql  0008_dependency_graph.up.sql  0009_ghost_signals.down.sql  0009_ghost_signals.up.sql  0010_approval_routing.up.sql  (+65 more)
(+1117 files in other folders)
