[package]
name = "quotey-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
quotey-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
