[package]
name = "quotey-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
quotey-core = { path = "../core" }
quotey-db = { path = "../db" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[lib]
name = "quotey_cli"
path = "src/lib.rs"

[[bin]]
name = "quotey"
path = "src/main.rs"
