[package]
name = "quotey-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
quotey-core = { path = "../core" }
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
rust_decimal.workspace = true
