[package]
name = "quotey-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Quotey Contributors"]

[dependencies]
# MCP Protocol
rmcp = { version = "0.8", features = ["server"] }

# Quotey internal
core = { package = "quotey-core", path = "../core" }
db = { package = "quotey-db", path = "../db" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Other
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
