[package]
name = "quotey-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Quotey Contributors"]

[dependencies]
# MCP Protocol
rmcp = { version = "0.8", features = ["server"] }

# Quotey internal
quotey-core = { path = "../core" }
quotey-db = { path = "../db" }

# Async runtime
tokio = { workspace = true, features = ["io-std", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Other
async-trait = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
rust_decimal = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "quotey-mcp"
path = "src/main.rs"
