[package]
name = "quotey-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono.workspace = true
quotey-agent = { path = "../agent" }
quotey-core = { path = "../core" }
quotey-db = { path = "../db" }
quotey-slack = { path = "../slack" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tera.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rust_decimal.workspace = true

[[bin]]
name = "quotey-server"
path = "src/main.rs"
